libnd4j/include/legacy/NativeOps.h

typedef sd::InteropDataBuffer  OpaqueDataBuffer;
typedef sd::TadPack OpaqueTadPack;
SD_LIB_EXPORT OpaqueTadPack *tadOnlyShapeInfo(OpaqueDataBuffer *hXShapeInfo, sd::LongType *dimension, sd::LongType dimensionLength);
SD_LIB_EXPORT void checkP2P() ;
SD_LIB_EXPORT void enableP2P(bool enable) ;
SD_LIB_EXPORT bool isP2PAvailable() ;
SD_LIB_EXPORT int getAvailableDevices() ;
SD_LIB_EXPORT void enableDebugMode(bool reallyEnable) ;
SD_LIB_EXPORT void setGridLimit(int gridSize) ;
/**
 * Enable or disable verbose native diagnostics.
 * @param reallyEnable true to enable verbose output, false to disable it
 */
SD_LIB_EXPORT void enableVerboseMode(bool reallyEnable) ;
SD_LIB_EXPORT sd::Pointer getConstantSpace() ;
SD_LIB_EXPORT bool isExperimentalEnabled() ;
SD_LIB_EXPORT void convertTypes(sd::Pointer *extras, int srcType, sd::Pointer dX, sd::LongType N, int dstType, sd::Pointer dZ) ;