nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/java/org/nd4j/nativeblas/Nd4jCpu.java


    public native @Cast("Nd4jPointer") Pointer getConstantSpace();

    public native int getAvailableDevices();

    public native void enableDebugMode(@Cast("bool") boolean reallyEnable);

    public native void enableVerboseMode(@Cast("bool") boolean reallyEnable);

    public native void setGridLimit(int gridSize);

    public native void tadOnlyShapeInfo(IntPointer xShapeInfo, IntPointer dimension, int dimensionLength, IntPointer targetBuffer, IntPointer offsetsBuffer);
    public native void tadOnlyShapeInfo(IntBuffer xShapeInfo, IntBuffer dimension, int dimensionLength, IntBuffer targetBuffer, IntBuffer offsetsBuffer);
    public native void tadOnlyShapeInfo(int[] xShapeInfo, int[] dimension, int dimensionLength, int[] targetBuffer, int[] offsetsBuffer);

    /*
     * PullRow special op
     */

    public native void pullRowsHalf(@Cast("Nd4jPointer*") PointerPointer extraPointers, @Cast("float16*") ShortPointer x, IntPointer xShapeInfo, @Cast("float16*") ShortPointer z, IntPointer zShapeInfo, int n, IntPointer indexes, IntPointer tadShapeInfo, IntPointer tadOffsets, IntPointer zTadShapeInfo, IntPointer zTadOffsets);
    public native void pullRowsHalf(@Cast("Nd4jPointer*") PointerPointer extraPointers, @Cast("float16*") ShortBuffer x, IntBuffer xShapeInfo, @Cast("float16*") ShortBuffer z, IntBuffer zShapeInfo, int n, IntBuffer indexes, IntBuffer tadShapeInfo, IntBuffer tadOffsets, IntBuffer zTadShapeInfo, IntBuffer zTadOffsets);
    public native void pullRowsHalf(@Cast("Nd4jPointer*") PointerPointer extraPointers, @Cast("float16*") short[] x, int[] xShapeInfo, @Cast("float16*") short[] z, int[] zShapeInfo, int n, int[] indexes, int[] tadShapeInfo, int[] tadOffsets, int[] zTadShapeInfo, int[] zTadOffsets);

    public native void pullRowsFloat(@Cast("Nd4jPointer*") PointerPointer extraPointers, FloatPointer x, IntPointer xShapeInfo, FloatPointer z, IntPointer zShapeInfo, int n, IntPointer indexes, IntPointer tadShapeInfo, IntPointer tadOffsets, IntPointer zTadShapeInfo, IntPointer zTadOffsets);
    public native void pullRowsFloat(@Cast("Nd4jPointer*") PointerPointer extraPointers, FloatBuffer x, IntBuffer xShapeInfo, FloatBuffer z, IntBuffer zShapeInfo, int n, IntBuffer indexes, IntBuffer tadShapeInfo, IntBuffer tadOffsets, IntBuffer zTadShapeInfo, IntBuffer zTadOffsets);
    public native void pullRowsFloat(@Cast("Nd4jPointer*") PointerPointer extraPointers, float[] x, int[] xShapeInfo, float[] z, int[] zShapeInfo, int n, int[] indexes, int[] tadShapeInfo, int[] tadOffsets, int[] zTadShapeInfo, int[] zTadOffsets);

    public native void pullRowsDouble(@Cast("Nd4jPointer*") PointerPointer extraPointers, DoublePointer x, IntPointer xShapeInfo, DoublePointer z, IntPointer zShapeInfo, int n, IntPointer indexes, IntPointer tadShapeInfo, IntPointer tadOffsets, IntPointer zTadShapeInfo, IntPointer zTadOffsets);
    public native void pullRowsDouble(@Cast("Nd4jPointer*") PointerPointer extraPointers, DoubleBuffer x, IntBuffer xShapeInfo, DoubleBuffer z, IntBuffer zShapeInfo, int n, IntBuffer indexes, IntBuffer tadShapeInfo, IntBuffer tadOffsets, IntBuffer zTadShapeInfo, IntBuffer zTadOffsets);
    public native void pullRowsDouble(@Cast("Nd4jPointer*") PointerPointer extraPointers, double[] x, int[] xShapeInfo, double[] z, int[] zShapeInfo, int n, int[] indexes, int[] tadShapeInfo, int[] tadOffsets, int[] zTadShapeInfo, int[] zTadOffsets);

    /**
     * Array averaging op
     */
    public native void averageHalf(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("float16*") ShortPointer dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);
    public native void averageHalf(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("float16*") ShortBuffer dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);
    public native void averageHalf(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("float16*") short[] dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);

    public native void averageFloat(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, FloatPointer dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);
    public native void averageFloat(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, FloatBuffer dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);
    public native void averageFloat(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, float[] dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);

    public native void averageDouble(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, DoublePointer dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);
    public native void averageDouble(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, DoubleBuffer dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);
    public native void averageDouble(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, double[] dz, int n, @Cast("Nd4jIndex") long length, @Cast("bool") boolean propagate);


    /**
     * P2P enabler
     */
    public native void enableP2P(@Cast("bool") boolean enable);

    public native void checkP2P();

    public native @Cast("bool") boolean isP2PAvailable();

    /**
     * Shuffle methods
     */

    public native void shuffleDouble(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, IntPointer shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);
    public native void shuffleDouble(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, IntBuffer shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);
    public native void shuffleDouble(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, int[] shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);

    public native void shuffleFloat(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, IntPointer shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);
    public native void shuffleFloat(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, IntBuffer shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);
    public native void shuffleFloat(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, int[] shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);

    public native void shuffleHalf(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, IntPointer shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);
    public native void shuffleHalf(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, IntBuffer shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);
    public native void shuffleHalf(@Cast("Nd4jPointer*") PointerPointer extras, @Cast("Nd4jPointer*") PointerPointer dx, @Cast("Nd4jPointer*") PointerPointer xShapeInfo, @Cast("Nd4jPointer*") PointerPointer dz, @Cast("Nd4jPointer*") PointerPointer zShapeInfo, int N, int[] shuffleMap, @Cast("Nd4jPointer*") PointerPointer tadShapeInfo, @Cast("Nd4jPointer*") PointerPointer tadOffsets);

    /**
     * Type Conversions
     */

    public native void convertTypes(@Cast("Nd4jPointer*") PointerPointer extras, int srcType, @Cast("Nd4jPointer") Pointer x, long N, int dstType, @Cast("Nd4jPointer") Pointer z);


    public native @Cast("bool") boolean isExperimentalEnabled();

    /**
     * Aggregate
     */
    public native void execAggregateFloat(@Cast("Nd4jPointer*") PointerPointer extraPointers,int opNum, @Cast("float**") PointerPointer arguments, int numArguments, @Cast("int**") PointerPointer shapeArguments, int numShapeArguments, IntPointer indexArguments, int numIndexArguments, @Cast("int**") PointerPointer intArrays, int numIntArrays, FloatPointer realArguments, int numRealArguments);
    public native void execAggregateFloat(@Cast("Nd4jPointer*") PointerPointer extraPointers,int opNum, @ByPtrPtr FloatPointer arguments, int numArguments, @ByPtrPtr IntPointer shapeArguments, int numShapeArguments, IntPointer indexArguments, int numIndexArguments, @ByPtrPtr IntPointer intArrays, int numIntArrays, FloatPointer realArguments, int numRealArguments);
    public native void execAggregateFloat(@Cast("Nd4jPointer*") PointerPointer extraPointers,int opNum, @ByPtrPtr FloatBuffer arguments, int numArguments, @ByPtrPtr IntBuffer shapeArguments, int numShapeArguments, IntBuffer indexArguments, int numIndexArguments, @ByPtrPtr IntBuffer intArrays, int numIntArrays, FloatBuffer realArguments, int numRealArguments);
    public native void execAggregateFloat(@Cast("Nd4jPointer*") PointerPointer extraPointers,int opNum, @ByPtrPtr float[] arguments, int numArguments, @ByPtrPtr int[] shapeArguments, int numShapeArguments, int[] indexArguments, int numIndexArguments, @ByPtrPtr int[] intArrays, int numIntArrays, float[] realArguments, int numRealArguments);
